# vut-ims-project

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
doc/: .gitignore  Makefile  documentation.bib  documentation.tex  dokumentace.tex
doc/inc/: petri_net.vsdx
src/: AverageUniformDistribution.cpp  AverageUniformDistribution.hpp  Car.cpp  Car.hpp  WorkShift.cpp  WorkShift.hpp  WorkShiftTimer.cpp  WorkShiftTimer.hpp  ims-project.cpp
zadani/: informace.txt
